2013-06-28  Julien Bect  <julien.bect@supelec.fr>

	Encapsulate kriging equations in a dedicated class.

	* core/@stk_kriging_equation: A new class that encapsulates the
	basic linear-algebraic operations related to the kriging
	equations. Methods: stk_kriging_equation.m, linsolve.m,
	stk_posterior_matcov.m and subsref.m.
	* core/stk_predict.m: Use the new class.

2013-06-19  Julien Bect  <julien.bect@supelec.fr>

	Send a warning when negative variances are set to zero.

	* core/stk_predict.m: modified.

2013-06-18  Julien Bect  <julien.bect@supelec.fr>

	Overloaded quantile() function for dataframe objects.

	* utils/@stk_dataframe/quantile.m: New function.

2013-06-16  Julien Bect  <julien.bect@supelec.fr>

	Improve backward compatibility.

	* utils/@stk_dataframe/private/get_column_indicator.m: Return the
	'var' field if it exists when 'v' is asked for, and display a
	warning.

	Fix a bug in stk_param_getdefaultbounds (not handling .a
	structures properly).

	* paramestim/stk_param_getdefaultbounds.m: Cast to double before
	calling var() to handle legacy .a structure properly.

2013-06-04  Julien Bect  <julien.bect@supelec.fr>

	Return a dataframe from stk_conditioning().

	* utils/stk_conditioning.m: Return a dataframe.

	Fix a bug in stk_predict (not handling .a structures properly).

	* core/stk_predict.m: Filter input arguments through double() to
	handle legacy .a structures properly. Add tests.

	Fix two bugs related to dataframe indexing.

	* utils/@stk_dataframe/private/get_column_indicator.m: Fixed.
	* utils/@stk_dataframe/subsref.m: Add tests.

2013-05-18  Julien Bect  <julien.bect@supelec.fr>

	Use function name as variable name in stk_feval.

	* utils/stk_feval.m: Use function name as variable name.

	Get rid of local variable use_indices in stk_predict.

	* core/stk_predict.m: Get rid of local variable use_indices.

2013-05-09  Julien Bect  <julien.bect@supelec.fr>

	Ensure that .a structures are still accepted.
